crates/aranya-policy-lang/tests/data/invalid_text/escaped_nul_byte.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid string
  |
1 | let x = "a\x00b"
  |           ^^^^ hex character escape is out of range [0x01, 0x7F]
